--- a/2-rppgAccuracyEvalu.ipynb
+++ b/2-rppgAccuracyEvalu.ipynb
@@ -570,10 +570,7 @@
     "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "    samplingRate = fps\n",
     "    cap.release()\n",
-    "\n",
-    "    save_dir = os.path.join(rootDir, 'windowFFT')\n",
-    "    os.makedirs(save_dir, exist_ok=True)        \n",
-    "\n",
+    "    \n",
     "    # CSVファイルの読み込み\n",
     "    ecg_csv_path = os.path.join(rootDir, dataName + '.csv')\n",
     "    ecg_df = pd.read_csv(ecg_csv_path)\n",
@@ -1126,6 +1123,331 @@
     "            print(f'  最大MAE: {second_half_df[\"bpm_MAE\"].max():.4f}')\n",
     "\n",
     "    print('\\n全ての処理が完了しました!')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c93cfd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# メソッドの組み合わせを定義\n",
+    "methodCombinations = [\n",
+    "    # 拡張POS(蒸気対応)\n",
+    "    ['cuda', cupy_CHROM, \"cupy_CHROM\"],\n",
+    "    ['cpu', cpu_LGI, \"cpu_LGI\"],\n",
+    "    ['cpu', cpu_GREEN, \"cpu_GREEN\"],\n",
+    "    ['cpu', cpu_ICA, \"cpu_ICA\"],\n",
+    "    ['cuda', cupy_POS, \"cupy_POS\"]\n",
+    "]\n",
+    "\n",
+    "# 全データの結果を格納するリスト\n",
+    "all_data_results = []\n",
+    "\n",
+    "for i in range(len(movie_paths)):\n",
+    "    print(f'Processing movie: {movie_paths[i]}')\n",
+    "    inputMoviePath = movie_paths[i]\n",
+    "    rootDir = data_dirs[i]\n",
+    "    dataName = movie_names[i]\n",
+    "\n",
+    "    cap = cv2.VideoCapture(inputMoviePath)\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "\n",
+    "    # CSVファイルの読み込み\n",
+    "    ecg_csv_path = os.path.join(rootDir, dataName + '.csv')\n",
+    "    ecg_df = pd.read_csv(ecg_csv_path)\n",
+    "\n",
+    "    ecg_RRI_csv_path = os.path.join(rootDir, f'RRI_Simple_{dataName}.csv')\n",
+    "    ecg_RRI_df = pd.read_csv(ecg_RRI_csv_path)\n",
+    "\n",
+    "    ecg_bpm_in_window = ecg_RRI_df['BPM']\n",
+    "    ecg_bpm_in_window_mean = ecg_RRI_df['BPM'].values.mean()\n",
+    "\n",
+    "    # window_signalsの読み込み\n",
+    "    os.makedirs(os.path.join(rootDir, SAVE_DIR), exist_ok=True)\n",
+    "    window_signals_data_path = os.path.join(rootDir, SAVE_DIR, f'{\"window_signals_\" + dataName}.csv')\n",
+    "    window_signals_data_df = pd.read_csv(window_signals_data_path)\n",
+    "    print(f'Loaded window signals data from {window_signals_data_path}, {len(window_signals_data_df)} rows')\n",
+    "\n",
+    "    stride_segment_calculator = StrideSegmentCalculator(window_sizes=WINDOW_SIZES, strides=STRIDES)\n",
+    "    analysis_df = stride_segment_calculator.create_analysis_dataframe(total_frames, fps)\n",
+    "\n",
+    "    # 結果を格納するリスト\n",
+    "    all_window_results = []\n",
+    "    \n",
+    "    for idx, row in analysis_df.iterrows():\n",
+    "        window_size = row['window_size']\n",
+    "        frame_start = row['frame_start']\n",
+    "        frame_end = row['frame_end']\n",
+    "        stride = row['stride']\n",
+    "\n",
+    "        window_start_time = frame_start / fps\n",
+    "        window_end_time = frame_end / fps\n",
+    "\n",
+    "        if window_end_time > total_frames / fps:\n",
+    "            continue\n",
+    "\n",
+    "        print(f\"\\nウィンドウ {idx}: 窓サイズ {window_size}s, ストライド {stride}s, フレーム {frame_start}-{frame_end}, 時間 {window_start_time:.2f}-{window_end_time:.2f}s\")\n",
+    "\n",
+    "        # 真値RRIデータを抽出\n",
+    "        ecg_RRI_mask = (ecg_RRI_df['time'] >= window_start_time) & \\\n",
+    "                       (ecg_RRI_df['time'] < window_end_time)\n",
+    "        ecg_bpm_in_window = ecg_RRI_df[ecg_RRI_mask]['BPM'].values\n",
+    "        ecg_bpm_in_window_mean = np.mean(ecg_bpm_in_window) if len(ecg_bpm_in_window) > 0 else np.nan\n",
+    "        print(f'    True Value RRI count in window: {len(ecg_bpm_in_window)}, Mean BPM: {ecg_bpm_in_window_mean:.2f}')\n",
+    "\n",
+    "        # RGB信号を抽出\n",
+    "        bvp_mask = window_signals_data_df['window_index'] == idx\n",
+    "        print(f'    BVP mask has {bvp_mask.sum()} matching rows')\n",
+    "\n",
+    "        filtered_rows = window_signals_data_df[bvp_mask]\n",
+    "\n",
+    "        r_signal_in_window = filtered_rows['r_signal_in_window'].values[0]\n",
+    "        g_signal_in_window = filtered_rows['g_signal_in_window'].values[0]\n",
+    "        b_signal_in_window = filtered_rows['b_signal_in_window'].values[0]\n",
+    "\n",
+    "        # 文字列をNumPy配列に変換\n",
+    "        r_signal_in_window = np.fromstring(r_signal_in_window[1:-1], sep=' ')\n",
+    "        g_signal_in_window = np.fromstring(g_signal_in_window[1:-1], sep=' ')\n",
+    "        b_signal_in_window = np.fromstring(b_signal_in_window[1:-1], sep=' ')\n",
+    "        \n",
+    "        if len(r_signal_in_window) == 0 or len(g_signal_in_window) == 0 or len(b_signal_in_window) == 0:\n",
+    "            raise ValueError(\"RGB信号が窓内に存在しません\")\n",
+    "\n",
+    "        # BVPメソッドの設定\n",
+    "        for methodCombination in methodCombinations:\n",
+    "            deviceType = methodCombination[0] \n",
+    "            bvpMethod = methodCombination[1] \n",
+    "            bvpMethodName = methodCombination[2]\n",
+    "            method_params = methodCombination[3].copy() if len(methodCombination) > 3 else {}\n",
+    "\n",
+    "            print(f\"\\n{'='*60}\")\n",
+    "            print(f\"実行メソッド: {bvpMethodName}\")\n",
+    "            print(f\"{'='*60}\")\n",
+    "\n",
+    "            # rgbからBVPを計算\n",
+    "            raw_bvp_signal_in_window, filtered_bvp_signal_in_window = extract_BVPsignal(\n",
+    "                r_signal_in_window,\n",
+    "                g_signal_in_window,\n",
+    "                b_signal_in_window,\n",
+    "                fps,\n",
+    "                deviceType,\n",
+    "                bvpMethod,\n",
+    "                bvpMethodName,\n",
+    "                method_params=method_params\n",
+    "            )\n",
+    "            \n",
+    "            # BVP信号の抽出に失敗した場合はスキップ\n",
+    "            if filtered_bvp_signal_in_window is None:\n",
+    "                print(f\"ウィンドウ {idx} をスキップ: BVP信号の抽出に失敗\")\n",
+    "                continue\n",
+    "            \n",
+    "            # FFT解析\n",
+    "            raw_bvp_signal_in_window = raw_bvp_signal_in_window.flatten() if raw_bvp_signal_in_window is not None else None\n",
+    "            filtered_bvp_signal_in_window = filtered_bvp_signal_in_window.flatten()\n",
+    "            fft_result_dic = analyze_window_fft(filtered_bvp_signal_in_window, fps)\n",
+    "\n",
+    "            # MAEの計算\n",
+    "            rppg_bpm = fft_result_dic['max_freq'] * 60\n",
+    "            rppg_freq = fft_result_dic['frequencies']\n",
+    "            rppg_amplitude = fft_result_dic['amplitudes']\n",
+    "            rppg_pwd = fft_result_dic['power_spectrum']\n",
+    "\n",
+    "            bpm_MAE = np.abs(ecg_bpm_in_window_mean - rppg_bpm) if not np.isnan(ecg_bpm_in_window_mean) else np.nan\n",
+    "\n",
+    "            print(f\"\\n結果サマリー:\")\n",
+    "            print(f\"  ECG BPM: {ecg_bpm_in_window_mean:.2f}\")\n",
+    "            print(f\"  rPPG BPM: {rppg_bpm:.2f}\")\n",
+    "            print(f\"  MAE: {bpm_MAE:.2f}\")\n",
+    "\n",
+    "            # 窓情報を保存\n",
+    "            window_info = {\n",
+    "                'data_name': dataName,  # データ名を追加\n",
+    "                'window_index': idx,\n",
+    "                'bvp_method': bvpMethodName,\n",
+    "                'window_size': window_size,\n",
+    "                'stride': stride,\n",
+    "                'frame_start': frame_start,\n",
+    "                'frame_end': frame_end,\n",
+    "                'window_start_time': window_start_time,\n",
+    "                'window_end_time': window_end_time,\n",
+    "                'r_signal_in_window': array_to_full_string(r_signal_in_window),\n",
+    "                'g_signal_in_window': array_to_full_string(g_signal_in_window),\n",
+    "                'b_signal_in_window': array_to_full_string(b_signal_in_window),\n",
+    "                'raw_bvp_in_window': raw_bvp_signal_in_window,\n",
+    "                'filtered_bvp_in_window': filtered_bvp_signal_in_window,\n",
+    "                'ecg_bpm_in_window': ecg_bpm_in_window,\n",
+    "                'ecg_bpm_mean': ecg_bpm_in_window_mean,\n",
+    "                'rppg_bpm': rppg_bpm,\n",
+    "                'bpm_MAE': bpm_MAE,\n",
+    "                'max_freq': fft_result_dic['max_freq'],\n",
+    "                'max_amplitude': fft_result_dic['max_amplitude'],\n",
+    "                'spectral_centroid': fft_result_dic['spectral_centroid'],\n",
+    "                'spectral_bandwidth': fft_result_dic['spectral_bandwidth'],\n",
+    "                'total_power': fft_result_dic['total_power']\n",
+    "            }\n",
+    "            all_window_results.append(window_info)\n",
+    "            all_data_results.append(window_info)  # 全データ用にも追加\n",
+    "    \n",
+    "    # 個別データの結果をDataFrameに変換して保存\n",
+    "    results_df = pd.DataFrame(all_window_results)\n",
+    "    results_save_dir = os.path.join(rootDir, SAVE_DIR)\n",
+    "    os.makedirs(results_save_dir, exist_ok=True)\n",
+    "    results_csv_path = os.path.join(results_save_dir, f'window_analysis_{dataName}.csv')\n",
+    "    results_df.to_csv(results_csv_path, index=False, encoding='utf-8-sig')\n",
+    "    print(f\"\\nFFT結果をCSVに保存: {results_csv_path}\")\n",
+    "\n",
+    "# 全データ統合の結果をDataFrameに変換\n",
+    "print(f'\\n{\"=\"*60}')\n",
+    "print('全データ統合処理を開始')\n",
+    "print(f'{\"=\"*60}')\n",
+    "\n",
+    "all_results_df = pd.DataFrame(all_data_results)\n",
+    "\n",
+    "# 統合結果を保存(最初のデータのディレクトリに保存)\n",
+    "integrated_save_dir = os.path.join(root_dir, SAVE_DIR)\n",
+    "os.makedirs(integrated_save_dir, exist_ok=True)\n",
+    "integrated_csv_path = os.path.join(integrated_save_dir, 'window_analysis_integrated_all.csv')\n",
+    "all_results_df.to_csv(integrated_csv_path, index=False, encoding='utf-8-sig')\n",
+    "print(f'統合結果をCSVに保存: {integrated_csv_path}')\n",
+    "print(f'統合データ総数: {len(all_results_df)}')\n",
+    "\n",
+    "# 分割時間の設定(秒)\n",
+    "SPLIT_TIME = 30\n",
+    "\n",
+    "# 統合データを前半と後半に分割\n",
+    "first_half_mask = all_results_df['window_end_time'] <= SPLIT_TIME\n",
+    "second_half_mask = all_results_df['window_start_time'] >= SPLIT_TIME\n",
+    "\n",
+    "integrated_first_half_df = all_results_df[first_half_mask].copy()\n",
+    "integrated_second_half_df = all_results_df[second_half_mask].copy()\n",
+    "\n",
+    "print(f'統合前半データ数: {len(integrated_first_half_df)}, 統合後半データ数: {len(integrated_second_half_df)}')\n",
+    "\n",
+    "# ヒートマップを作成する関数\n",
+    "def create_mae_heatmap(df, title_suffix, save_suffix, save_dir):\n",
+    "    \"\"\"\n",
+    "    BPM MAEのヒートマップを作成\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    df : pd.DataFrame\n",
+    "        window_analysisデータ\n",
+    "    title_suffix : str\n",
+    "        タイトルに追加する文字列\n",
+    "    save_suffix : str\n",
+    "        保存ファイル名に追加する文字列\n",
+    "    save_dir : str\n",
+    "        保存先ディレクトリ\n",
+    "    \"\"\"\n",
+    "    # 手法のリストを取得\n",
+    "    methods = sorted(df['bvp_method'].unique())\n",
+    "    window_sizes = sorted(df['window_size'].unique())\n",
+    "    \n",
+    "    # ヒートマップ用のデータを準備\n",
+    "    heatmap_data = pd.DataFrame(index=window_sizes, columns=methods)\n",
+    "    count_data = pd.DataFrame(index=window_sizes, columns=methods)  # サンプル数も記録\n",
+    "    \n",
+    "    for window_size in window_sizes:\n",
+    "        for method in methods:\n",
+    "            mask = (df['window_size'] == window_size) & (df['bvp_method'] == method)\n",
+    "            mae_values = df[mask]['bpm_MAE'].dropna()\n",
+    "            \n",
+    "            if len(mae_values) > 0:\n",
+    "                # 平均MAEを計算\n",
+    "                mean_mae = mae_values.mean()\n",
+    "                heatmap_data.loc[window_size, method] = mean_mae\n",
+    "                count_data.loc[window_size, method] = len(mae_values)\n",
+    "    \n",
+    "    # データ型を数値に変換\n",
+    "    heatmap_data = heatmap_data.astype(float)\n",
+    "    \n",
+    "    # ヒートマップを作成\n",
+    "    plt.figure(figsize=(14, 8))\n",
+    "    sns.heatmap(\n",
+    "        heatmap_data,\n",
+    "        annot=True,\n",
+    "        fmt='.4f',\n",
+    "        cmap='YlOrRd',\n",
+    "        cbar_kws={'label': 'Mean MAE (BPM)'},\n",
+    "        vmin=0,\n",
+    "        vmax=25\n",
+    "    )\n",
+    "    \n",
+    "    plt.title(f'MAE vs BVP Method - Integrated All Data ({title_suffix})', fontsize=14, pad=20)\n",
+    "    plt.xlabel('BVP Method', fontsize=12)\n",
+    "    plt.ylabel('Window Size [s]', fontsize=12)\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # 保存\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "    save_path = os.path.join(save_dir, f'heatmap_mae_{save_suffix}_integrated_all.png')\n",
+    "    plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    \n",
+    "    print(f'  統合ヒートマップを保存: {save_path}')\n",
+    "    \n",
+    "    # サンプル数の情報も出力\n",
+    "    print(f'\\n  各条件のサンプル数:')\n",
+    "    print(count_data.to_string())\n",
+    "    \n",
+    "    return heatmap_data\n",
+    "\n",
+    "# 統合データの前半のヒートマップを作成\n",
+    "if len(integrated_first_half_df) > 0:\n",
+    "    print('\\n統合データ - 前半(ノイズなし)のヒートマップを作成中...')\n",
+    "    integrated_first_half_heatmap = create_mae_heatmap(\n",
+    "        integrated_first_half_df,\n",
+    "        'First Half (No Noise) - All Data',\n",
+    "        'first_half',\n",
+    "        integrated_save_dir\n",
+    "    )\n",
+    "else:\n",
+    "    print('統合データの前半データが存在しません')\n",
+    "\n",
+    "# 統合データの後半のヒートマップを作成\n",
+    "if len(integrated_second_half_df) > 0:\n",
+    "    print('\\n統合データ - 後半(ノイズあり)のヒートマップを作成中...')\n",
+    "    integrated_second_half_heatmap = create_mae_heatmap(\n",
+    "        integrated_second_half_df,\n",
+    "        'Second Half (With Noise) - All Data',\n",
+    "        'second_half',\n",
+    "        integrated_save_dir\n",
+    "    )\n",
+    "else:\n",
+    "    print('統合データの後半データが存在しません')\n",
+    "\n",
+    "# 統合データの統計情報を出力\n",
+    "print(f'\\n統計情報 - 統合データ(全データ)')\n",
+    "print('-' * 60)\n",
+    "\n",
+    "if len(integrated_first_half_df) > 0:\n",
+    "    print('前半(ノイズなし):')\n",
+    "    print(f'  データ数: {len(integrated_first_half_df)}')\n",
+    "    print(f'  平均MAE: {integrated_first_half_df[\"bpm_MAE\"].mean():.4f}')\n",
+    "    print(f'  標準偏差: {integrated_first_half_df[\"bpm_MAE\"].std():.4f}')\n",
+    "    print(f'  最小MAE: {integrated_first_half_df[\"bpm_MAE\"].min():.4f}')\n",
+    "    print(f'  最大MAE: {integrated_first_half_df[\"bpm_MAE\"].max():.4f}')\n",
+    "    print(f'  中央値: {integrated_first_half_df[\"bpm_MAE\"].median():.4f}')\n",
+    "\n",
+    "if len(integrated_second_half_df) > 0:\n",
+    "    print('\\n後半(ノイズあり):')\n",
+    "    print(f'  データ数: {len(integrated_second_half_df)}')\n",
+    "    print(f'  平均MAE: {integrated_second_half_df[\"bpm_MAE\"].mean():.4f}')\n",
+    "    print(f'  標準偏差: {integrated_second_half_df[\"bpm_MAE\"].std():.4f}')\n",
+    "    print(f'  最小MAE: {integrated_second_half_df[\"bpm_MAE\"].min():.4f}')\n",
+    "    print(f'  最大MAE: {integrated_second_half_df[\"bpm_MAE\"].max():.4f}')\n",
+    "    print(f'  中央値: {integrated_second_half_df[\"bpm_MAE\"].median():.4f}')\n",
+    "\n",
+    "# 各データの内訳も表示\n",
+    "print('\\n各データの内訳:')\n",
+    "for data_name in all_results_df['data_name'].unique():\n",
+    "    data_count = len(all_results_df[all_results_df['data_name'] == data_name])\n",
+    "    print(f'  {data_name}: {data_count}件')\n",
+    "\n",
+    "print('\\n全ての処理が完了しました!')"
    ]
   }
  ],
