--- a/1-init.ipynb
+++ b/1-init.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6a1f55b6",
    "metadata": {},
    "outputs": [],
@@ -20,25 +20,23 @@
     "from typing import List, Tuple\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import signal"
+    "from scipy import signal\n",
+    "from scipy.spatial import ConvexHull\n",
+    "\n",
+    "import pyVHR as vhr\n",
+    "from pyVHR.plot.visualize import *\n",
+    "from pyVHR.BVP import *\n",
+    "vhr.plot.VisualizeParams.renderer = 'notebook'\n",
+    "\n",
+    "import mediapipe as mp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c3e6fd7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "動画ディレクトリ: ['experimentData\\\\202509181755']\n",
-      "Processing video directory: experimentData\\202509181755\n",
-      "真値ファイルのパス: ['experimentData\\\\202509181755\\\\202509181755.txt']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 入力とする動画と動画のファイル名を取得\n",
     "root_dir = \"experimentData\\\\\"\n",
@@ -59,19 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e9d1e9ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading true value file: experimentData\\202509181755\\202509181755.txt\n",
-      "Saving to CSV: experimentData\\202509181755\\202509181755.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 真値txtファイルを読み込み、データフレームに変換\n",
     "for trueValueTxt_path in trueValueTxt_paths:\n",
@@ -92,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "291708b9",
    "metadata": {},
    "outputs": [],
@@ -124,22 +113,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f52a0e38",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "動画ディレクトリ: ['experimentData\\\\202509181755']\n",
-      "data_dirs: ['experimentData\\\\202509181755']\n",
-      "movie_paths: ['experimentData\\\\202509181755\\\\202509181755.avi']\n",
-      "movie_names: ['202509181755']\n",
-      "true_value_csv_array: ['experimentData\\\\202509181755\\\\202509181755.csv']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 入力とする動画と動画のファイル名を取得\n",
     "root_dir = \"experimentData\\\\\"\n",
@@ -170,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8b0cfc3f",
    "metadata": {},
    "outputs": [],
@@ -196,6 +173,191 @@
     "\n",
     "    rri_simple_path = os.path.join(data_dirs[i], 'RRI_Simple_' + movie_names[i] + '.csv')\n",
     "    pd.DataFrame.to_csv(trueValueRRIDataFrame, rri_simple_path, index=False, encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "610daf80",
+   "metadata": {},
+   "source": [
+    "## 肌領域検出でRGB抽出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce57f64b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_roi(frame, roi_info):\n",
+    "    \"\"\"\n",
+    "    ROIを可視化する関数\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    frame : np.ndarray\n",
+    "        元の画像フレーム\n",
+    "    roi_info : dict\n",
+    "        extract_rgb_with_fixed_roi()が返すROI情報\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    vis_frame : np.ndarray\n",
+    "        ROIを描画した画像\n",
+    "    \"\"\"\n",
+    "    vis_frame = frame.copy()\n",
+    "    \n",
+    "    # マスク領域を半透明で表示\n",
+    "    mask_colored = cv2.cvtColor(roi_info['mask'], cv2.COLOR_GRAY2BGR)\n",
+    "    mask_colored[:, :, 1] = roi_info['mask']  # 緑チャンネル\n",
+    "    vis_frame = cv2.addWeighted(vis_frame, 0.7, mask_colored, 0.3, 0)\n",
+    "    \n",
+    "    # 凸包の輪郭を描画\n",
+    "    cv2.polylines(vis_frame, [roi_info['hull_points']], \n",
+    "                  True, (0, 255, 0), 2)\n",
+    "    \n",
+    "    # ランドマークを描画（オプション）\n",
+    "    for pt in roi_info['landmarks']:\n",
+    "        cv2.circle(vis_frame, tuple(pt), 1, (255, 0, 0), -1)\n",
+    "    \n",
+    "    return vis_frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "234742c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# メイン処理\n",
+    "for i in range(len(movie_paths)):\n",
+    "    inputMoviePath = movie_paths[i]\n",
+    "    rootDir = data_dirs[i]\n",
+    "    dataName = movie_names[i]\n",
+    "    save_dir = os.path.join(rootDir)\n",
+    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"処理中: {dataName}\")\n",
+    "    print(f\"保存先: {save_dir}\")\n",
+    "    print(f\"{'='*60}\")\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "\n",
+    "    # 動画情報取得\n",
+    "    cap = cv2.VideoCapture(inputMoviePath)\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    duration = total_frames / fps\n",
+    "    print(f\"動画情報: {total_frames}フレーム, {fps:.2f}fps, {duration:.2f}秒\")\n",
+    "\n",
+    "    # 1フレーム目でROI検出\n",
+    "    ret, first_frame = cap.read()\n",
+    "    if not ret:\n",
+    "        cap.release()\n",
+    "        print(f\"エラー: 動画の読み込みに失敗しました: {inputMoviePath}\")\n",
+    "        continue\n",
+    "    \n",
+    "    mp_face_mesh = mp.solutions.face_mesh\n",
+    "    with mp_face_mesh.FaceMesh(\n",
+    "        static_image_mode=True,\n",
+    "        max_num_faces=1,\n",
+    "        refine_landmarks=True,\n",
+    "        min_detection_confidence=0.5) as face_mesh:\n",
+    "        \n",
+    "        frame_rgb = cv2.cvtColor(first_frame, cv2.COLOR_BGR2RGB)\n",
+    "        results_mp = face_mesh.process(frame_rgb)\n",
+    "        \n",
+    "        if not results_mp.multi_face_landmarks:\n",
+    "            cap.release()\n",
+    "            print(f\"エラー: 顔が検出できませんでした: {inputMoviePath}\")\n",
+    "            continue\n",
+    "        \n",
+    "        landmarks = results_mp.multi_face_landmarks[0]\n",
+    "        h, w = first_frame.shape[:2]\n",
+    "        \n",
+    "        ldmks = np.array([[int(l.x * w), int(l.y * h)] \n",
+    "                        for l in landmarks.landmark])\n",
+    "        \n",
+    "        hull = ConvexHull(ldmks)\n",
+    "        hull_points = ldmks[hull.vertices]\n",
+    "        \n",
+    "        mask = np.zeros((h, w), dtype=np.uint8)\n",
+    "        cv2.fillConvexPoly(mask, hull_points, 255)\n",
+    "\n",
+    "        roi_info = {\n",
+    "            'mask': mask,\n",
+    "            'hull_points': hull_points,\n",
+    "            'landmarks': ldmks\n",
+    "        }\n",
+    "\n",
+    "        vis_frame = visualize_roi(first_frame, roi_info)\n",
+    "        roi_vis_path = os.path.join(save_dir, \"roi_visualization.jpg\")\n",
+    "        cv2.imwrite(roi_vis_path, vis_frame)\n",
+    "        print(f\"ROI可視化画像を保存: {roi_vis_path}\")\n",
+    "        print(f\"1フレーム目でROI検出完了: {len(hull_points)}個の凸包頂点\")\n",
+    "\n",
+    "    # 全フレームでRGB信号抽出\n",
+    "    print(\"全フレームで特徴量抽出中...\")\n",
+    "    \n",
+    "    cap.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
+    "    frame_count = 0\n",
+    "\n",
+    "    # 結果を格納する辞書\n",
+    "    results = {\n",
+    "        'frame_number': [], 'timestamp': [],'r_mean': [], 'g_mean': [], 'b_mean': []\n",
+    "    }\n",
+    "\n",
+    "    prev_frame = None\n",
+    "    prev_gray = None\n",
+    "\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        \n",
+    "        timestamp = frame_count / fps\n",
+    "        \n",
+    "        # BGRをRGBに変換\n",
+    "        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        \n",
+    "        # マスク領域のピクセルを抽出\n",
+    "        valid_pixels = frame_rgb[mask > 0]\n",
+    "        \n",
+    "        if len(valid_pixels) > 0:\n",
+    "            # RGB統計量\n",
+    "            r_mean = np.mean(valid_pixels[:, 0])\n",
+    "            g_mean = np.mean(valid_pixels[:, 1])\n",
+    "            b_mean = np.mean(valid_pixels[:, 2])\n",
+    "            \n",
+    "        else:\n",
+    "            raise ValueError(\"ROI内に有効なピクセルが存在しません\")\n",
+    "\n",
+    "        # 結果を保存\n",
+    "        results['frame_number'].append(frame_count)\n",
+    "        results['timestamp'].append(timestamp)\n",
+    "        results['r_mean'].append(r_mean)\n",
+    "        results['g_mean'].append(g_mean)\n",
+    "        results['b_mean'].append(b_mean)\n",
+    "        \n",
+    "        # 前フレームを保存\n",
+    "        prev_frame = frame.copy()\n",
+    "        prev_gray = gray.copy()\n",
+    "        \n",
+    "        frame_count += 1\n",
+    "        \n",
+    "        if frame_count % 100 == 0:\n",
+    "            print(f\"  処理中: {frame_count}/{total_frames} フレーム ({frame_count/total_frames*100:.1f}%)\")\n",
+    "\n",
+    "    cap.release()\n",
+    "    print(f\"特徴量抽出完了: {frame_count}フレーム処理\")\n",
+    "\n",
+    "    # DataFrameに変換して保存\n",
+    "    signals_df = pd.DataFrame(results)\n",
+    "\n",
+    "    save_path = os.path.join(save_dir, \"extracted_signals.csv\")\n",
+    "    signals_df.to_csv(save_path, index=False)\n",
+    "    print(f\"抽出した信号を保存: {save_path}\")"
    ]
   }
  ],
