ヒートマップの順序を揃えた

--- a/2-rppgAccuracyEvalu.ipynb
+++ b/2-rppgAccuracyEvalu.ipynb
@@ -853,7 +853,7 @@
     "                保存ファイル名に追加する文字列\n",
     "            \"\"\"\n",
     "            # 手法のリストを取得\n",
-    "            methods = df['bvp_method'].unique()\n",
+    "            methods = sorted(df['bvp_method'].unique())\n",
     "            window_sizes = sorted(df['window_size'].unique())\n",
     "            \n",
     "            # ヒートマップ用のデータを準備\n",
