全体の相関を求める部分修正

--- a/3-ExploreParamPCA.ipynb
+++ b/3-ExploreParamPCA.ipynb
@@ -2432,7 +2432,12 @@
     "        'h_signal_in_window', 's_signal_in_window', 'v_signal_in_window',\n",
     "        'h_std_signal_in_window', 's_std_signal_in_window', 'v_std_signal_in_window',\n",
     "        'lightness_signal_in_window', \n",
-    "        'canny_edge_ratio'\n",
+    "        'lbp_entropy', 'lbp_variance', 'lbp_skewness', 'lbp_kurtosis',\n",
+    "        'lbp_chi2_distance', 'lbp_uniform_ratio',\n",
+    "        'canny_edge_ratio', 'glcm_isotropy',\n",
+    "        'flow_mean_motion', 'flow_std_motion', 'flow_ratio_1px', 'flow_ratio_5px', 'flow_ratio_10px',\n",
+    "        'wavelet_hh_energies', 'fft_high_freq_ratios',\n",
+    "        'angles_in_window'\n",
     "    ]\n",
     "    \n",
     "    for col in array_cols:\n",
@@ -2557,7 +2562,7 @@
    "id": "640079ce",
    "metadata": {},
    "source": [
-    "偏相関解析"
+    "### 偏相関解析"
    ]
   }
  ],
