angleを算出するように変更

--- a/1-init.ipynb
+++ b/1-init.ipynb
@@ -304,7 +304,7 @@
     "\n",
     "    # 結果を格納する辞書\n",
     "    results = {\n",
-    "        'frame_number': [], 'timestamp': [],'r_mean': [], 'g_mean': [], 'b_mean': []\n",
+    "        'frame_number': [], 'timestamp': [],'r_mean': [], 'g_mean': [], 'b_mean': [], 'angle': []\n",
     "    }\n",
     "\n",
     "    prev_frame = None\n",
@@ -329,6 +329,21 @@
     "            r_mean = np.mean(valid_pixels[:, 0])\n",
     "            g_mean = np.mean(valid_pixels[:, 1])\n",
     "            b_mean = np.mean(valid_pixels[:, 2])\n",
+    "\n",
+    "            # RGB正規化\n",
+    "            r_mean_square = r_mean ** 2\n",
+    "            g_mean_square = g_mean ** 2\n",
+    "            b_mean_square = b_mean ** 2\n",
+    "\n",
+    "            normalized_r_mean = r_mean / np.sqrt(r_mean_square + g_mean_square + b_mean_square)\n",
+    "            normalized_g_mean = g_mean / np.sqrt(r_mean_square + g_mean_square + b_mean_square)\n",
+    "            normalized_b_mean = b_mean / np.sqrt(r_mean_square + g_mean_square + b_mean_square)\n",
+    "\n",
+    "            # 標準化肌ベクトル [0.7682, 0.5121, 0.3841]との角度計算\n",
+    "            skin_vector = np.array([normalized_r_mean, normalized_g_mean, normalized_b_mean])\n",
+    "            reference_vector = np.array([0.7682, 0.5121, 0.3841])\n",
+    "            cosine_similarity = np.dot(skin_vector, reference_vector)\n",
+    "            angle = np.arccos(cosine_similarity) * (180 / np.pi)\n",
     "            \n",
     "        else:\n",
     "            raise ValueError(\"ROI内に有効なピクセルが存在しません\")\n",
@@ -339,6 +354,7 @@
     "        results['r_mean'].append(r_mean)\n",
     "        results['g_mean'].append(g_mean)\n",
     "        results['b_mean'].append(b_mean)\n",
+    "        results['angle'].append(angle)\n",
     "        \n",
     "        # 前フレームを保存\n",
     "        prev_frame = frame.copy()\n",
