プロット部分分割

--- a/4-POSAccuracyEvalu.ipynb
+++ b/4-POSAccuracyEvalu.ipynb
@@ -464,7 +464,8 @@
    "id": "3d759bd0",
    "metadata": {},
    "source": [
-    "## 窓ごとにBVP解析"
+    "## 窓ごとにBVP解析\n",
+    "ここのセクション2で同じことやってる"
    ]
   },
   {
@@ -814,8 +815,16 @@
     "    os.makedirs(results_save_dir, exist_ok=True)\n",
     "    results_csv_path = os.path.join(results_save_dir, f'window_analysis_{dataName}.csv')\n",
     "    results_df.to_csv(results_csv_path, index=False, encoding='utf-8-sig')\n",
-    "    print(f\"\\nFFT結果をCSVに保存: {results_csv_path}\")  \n",
-    "\n",
+    "    print(f\"\\nFFT結果をCSVに保存: {results_csv_path}\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4264c1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 分割時間の設定(秒)\n",
     "SPLIT_TIME = 90\n",
     "\n",
