輝度強度のプロット

--- a/4-POSAccuracyEvalu.ipynb
+++ b/4-POSAccuracyEvalu.ipynb
@@ -560,6 +560,7 @@
     "    # bvp_methodが'cupy_POS'のデータのみを抽出\n",
     "    pos_window_analysis_data_df = window_analysis_data_df[window_analysis_data_df['bvp_method'] == 'cupy_POS'].copy()\n",
     "    \n",
+    "    window_index  = 0\n",
     "    for idx, row in pos_window_analysis_data_df.iterrows():\n",
     "        window_size = row['window_size']\n",
     "        frame_start = row['frame_start']\n",
@@ -719,7 +720,7 @@
     "\n",
     "        # 窓情報を保存\n",
     "        window_info = {\n",
-    "            'window_index': idx,\n",
+    "            'window_index': window_index,\n",
     "            'window_size': window_size,\n",
     "            'stride': stride,\n",
     "            'frame_start': frame_start,\n",
@@ -743,6 +744,7 @@
     "            'total_power': fft_result_dic['total_power']\n",
     "        }\n",
     "        all_window_results.append(window_info)\n",
+    "        window_index += 1\n",
     "    \n",
     "    # 全結果をDataFrameに変換して保存\n",
     "    results_df = pd.DataFrame(all_window_results)\n",
@@ -1310,7 +1312,7 @@
    "id": "02b7c4bd",
    "metadata": {},
    "source": [
-    "輝度と変えた射影行列のMAEを箱げずにプロット"
+    "輝度と変えた射影行列のMAEを箱ひげ図にプロット"
    ]
   },
   {
@@ -1320,167 +1322,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(movie_paths)):\n",
-    "    print(f'Processing movie: {movie_paths[i]}')\n",
-    "    inputMoviePath = movie_paths[i]\n",
-    "    rootDir = data_dirs[i]\n",
-    "    dataName = movie_names[i]\n",
-    "\n",
-    "    cap = cv2.VideoCapture(inputMoviePath)\n",
-    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-    "    \n",
-    "    projection_comparison_path = os.path.join(rootDir, SAVE_DIR, f'projection_comparison_{dataName}.csv')\n",
-    "    intensity_comparison_path = os.path.join(rootDir, SAVE_DIR, f'window_intensity_{dataName}.csv')\n",
-    "    \n",
-    "    # CSVファイルが存在するか確認\n",
-    "    if not os.path.exists(projection_comparison_path):\n",
-    "        print(f'ファイルが見つかりません: {projection_comparison_path}')\n",
-    "        continue\n",
-    "    \n",
-    "    # データを読み込む\n",
-    "    df = pd.read_csv(projection_comparison_path)\n",
-    "    print(f'\\n読み込んだデータ件数(projection): {len(df)}')\n",
-    "    print(f'投影パターン: {df[\"projection\"].unique()}')\n",
-    "    \n",
-    "    # Intensityデータの読み込み\n",
-    "    has_intensity = False\n",
-    "    if os.path.exists(intensity_comparison_path):\n",
-    "        intensity_df = pd.read_csv(intensity_comparison_path)\n",
-    "        print(f'読み込んだデータ件数(intensity): {len(intensity_df)}')\n",
-    "        has_intensity = True\n",
-    "    else:\n",
-    "        print(f'Intensityファイルが見つかりません: {intensity_comparison_path}')\n",
-    "    \n",
-    "    # 図の保存先ディレクトリ\n",
-    "    figure_dir = os.path.join(rootDir, SAVE_DIR, 'figures')\n",
-    "    os.makedirs(figure_dir, exist_ok=True)\n",
-    "    \n",
-    "    # ============================================================================\n",
-    "    # 1. 全データに対する箱ひげ図\n",
-    "    # ============================================================================\n",
-    "    fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "    \n",
-    "    # 投影パターンごとにデータを準備\n",
-    "    projections = ['original', 'modified_1', 'modified_2']\n",
-    "    if has_intensity:\n",
-    "        projections.append('intensity')\n",
-    "    \n",
-    "    data_all = []\n",
-    "    for proj in projections[:3]:\n",
-    "        data_all.append(df[df['projection'] == proj]['bpm_MAE'].dropna())\n",
-    "    if has_intensity:\n",
-    "        data_all.append(intensity_df['bpm_MAE'].dropna())\n",
-    "    \n",
-    "    # 箱ひげ図を作成\n",
-    "    bp1 = ax.boxplot(data_all, tick_labels=projections, patch_artist=True,\n",
-    "                     showmeans=True, meanline=True)\n",
-    "    \n",
-    "    # 色をつける\n",
-    "    colors = ['lightblue', 'lightgreen', 'lightcoral', 'lightyellow']\n",
-    "    for patch, color in zip(bp1['boxes'], colors[:len(projections)]):\n",
-    "        patch.set_facecolor(color)\n",
-    "    \n",
-    "    ax.set_xlabel('Projection Matrix / Method', fontsize=12)\n",
-    "    ax.set_ylabel('BPM MAE', fontsize=12)\n",
-    "    ax.set_title(f'Comparison of Projection Matrices and Intensity - All Data\\n({dataName})', fontsize=14)\n",
-    "    ax.grid(True, alpha=0.3)\n",
-    "    \n",
-    "    # 統計情報を追加\n",
-    "    stats_text = []\n",
-    "    for proj, data in zip(projections, data_all):\n",
-    "        stats_text.append(f'{proj}: n={len(data)}, mean={np.mean(data):.2f}, median={np.median(data):.2f}')\n",
-    "    ax.text(0.02, 0.98, '\\n'.join(stats_text), transform=ax.transAxes,\n",
-    "            verticalalignment='top', bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.5),\n",
-    "            fontsize=9)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    output_path_all = os.path.join(figure_dir, f'projection_intensity_comparison_all_{dataName}.png')\n",
-    "    plt.savefig(output_path_all, dpi=300, bbox_inches='tight')\n",
-    "    print(f'\\n全データの箱ひげ図を保存: {output_path_all}')\n",
-    "    plt.close()\n",
-    "    \n",
-    "    # ============================================================================\n",
-    "    # 2. Originalが高MAE(MAE>=10)のデータに対する箱ひげ図\n",
-    "    # ============================================================================\n",
-    "    # まず、originalで高MAEのwindow_indexを特定\n",
-    "    original_df = df[df['projection'] == 'original'].copy()\n",
-    "    high_mae_windows = original_df[original_df['bpm_MAE'] >= 10]['window_index'].unique()\n",
-    "    \n",
-    "    print(f'\\nOriginalで高MAE(>=10)のウィンドウ数: {len(high_mae_windows)}')\n",
-    "    \n",
-    "    if len(high_mae_windows) > 0:\n",
-    "        # 高MAEウィンドウのデータを抽出\n",
-    "        high_mae_df = df[df['window_index'].isin(high_mae_windows)].copy()\n",
-    "        \n",
-    "        fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "        \n",
-    "        # 投影パターンごとにデータを準備\n",
-    "        data_high_mae = []\n",
-    "        for proj in projections[:3]:\n",
-    "            data_high_mae.append(high_mae_df[high_mae_df['projection'] == proj]['bpm_MAE'].dropna())\n",
-    "        if has_intensity:\n",
-    "            # Intensityデータも同じwindow_indexでフィルタ\n",
-    "            intensity_high_mae = intensity_df[intensity_df['window_index'].isin(high_mae_windows)]['bpm_MAE'].dropna()\n",
-    "            data_high_mae.append(intensity_high_mae)\n",
-    "        \n",
-    "        # 箱ひげ図を作成\n",
-    "        bp2 = ax.boxplot(data_high_mae, tick_labels=projections, patch_artist=True,\n",
-    "                         showmeans=True, meanline=True)\n",
-    "        \n",
-    "        # 色をつける\n",
-    "        for patch, color in zip(bp2['boxes'], colors[:len(projections)]):\n",
-    "            patch.set_facecolor(color)\n",
-    "        \n",
-    "        ax.set_xlabel('Projection Matrix / Method', fontsize=12)\n",
-    "        ax.set_ylabel('BPM MAE', fontsize=12)\n",
-    "        ax.set_title(f'Comparison of Projection Matrices and Intensity - High MAE Windows (Original MAE>=10)\\n({dataName})', \n",
-    "                     fontsize=14)\n",
-    "        ax.grid(True, alpha=0.3)\n",
-    "        ax.axhline(y=10, color='red', linestyle='--', alpha=0.5, label='MAE=10 threshold')\n",
-    "        \n",
-    "        # 統計情報を追加\n",
-    "        stats_text = []\n",
-    "        for proj, data in zip(projections, data_high_mae):\n",
-    "            improvement = ''\n",
-    "            if proj != 'original' and len(data_high_mae[0]) > 0:\n",
-    "                original_mean = np.mean(data_high_mae[0])\n",
-    "                current_mean = np.mean(data)\n",
-    "                improvement_val = current_mean - original_mean\n",
-    "                improvement_rate = ((original_mean - current_mean) / original_mean) * 100 if original_mean > 0 else 0\n",
-    "                improvement = f', Δ={improvement_val:.2f} ({improvement_rate:+.1f}%)'\n",
-    "            stats_text.append(f'{proj}: n={len(data)}, mean={np.mean(data):.2f}, median={np.median(data):.2f}{improvement}')\n",
-    "        \n",
-    "        ax.text(0.02, 0.98, '\\n'.join(stats_text), transform=ax.transAxes,\n",
-    "                verticalalignment='top', bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.5),\n",
-    "                fontsize=9)\n",
-    "        ax.legend()\n",
-    "        \n",
-    "        plt.tight_layout()\n",
-    "        output_path_high = os.path.join(figure_dir, f'projection_intensity_comparison_high_mae_{dataName}.png')\n",
-    "        plt.savefig(output_path_high, dpi=300, bbox_inches='tight')\n",
-    "        print(f'高MAEデータの箱ひげ図を保存: {output_path_high}')\n",
-    "        plt.close()\n",
-    "        \n",
-    "        # 改善率の計算と表示\n",
-    "        print(f'\\n{\"=\"*60}')\n",
-    "        print(f'改善効果の分析 ({dataName}):')\n",
-    "        print(f'{\"=\"*60}')\n",
-    "        original_mean = np.mean(data_high_mae[0])\n",
-    "        for proj, data in zip(projections[1:], data_high_mae[1:]):\n",
-    "            current_mean = np.mean(data)\n",
-    "            improvement = original_mean - current_mean\n",
-    "            improvement_rate = (improvement / original_mean) * 100 if original_mean > 0 else 0\n",
-    "            print(f'{proj}:')\n",
-    "            print(f'  平均MAE: {current_mean:.2f} (Original: {original_mean:.2f})')\n",
-    "            print(f'  改善量: {improvement:.2f} bpm')\n",
-    "            print(f'  改善率: {improvement_rate:.2f}%')\n",
-    "    else:\n",
-    "        print('\\n高MAE(>=10)のウィンドウが存在しないため、2つ目の図はスキップします。')\n",
-    "    \n",
-    "    cap.release()\n",
-    "    print(f'\\n{dataName}の処理が完了しました。\\n')\n",
-    "\n",
     "# ============================================================================\n",
     "# 全動画統合の箱ひげ図作成\n",
     "# ============================================================================\n",
@@ -1543,6 +1384,14 @@
     "    if has_intensity_integrated:\n",
     "        data_integrated_all.append(all_intensity_df['bpm_MAE'].dropna())\n",
     "    \n",
+    "    # data_integrated_allをのデータ数確認\n",
+    "    print('\\n各投影パターンのデータ数:')\n",
+    "    for proj, data in zip(projections, data_integrated_all):\n",
+    "        print(f'  {proj}: {len(data)}件')\n",
+    "    \n",
+    "    df_test = pd.DataFrame({proj: data for proj, data in zip(projections, data_integrated_all)})\n",
+    "    print(df_test.head())\n",
+    "    \n",
     "    bp1 = ax.boxplot(data_integrated_all, tick_labels=projections, patch_artist=True,\n",
     "                     showmeans=True, meanline=True)\n",
     "    \n",
@@ -1578,8 +1427,6 @@
     "    # 動画名とwindow_indexの組み合わせで高MAEを特定\n",
     "    high_mae_mask = original_integrated_df['bpm_MAE'] >= 10\n",
     "    high_mae_keys = original_integrated_df[high_mae_mask][['movie_name', 'window_index']].values\n",
-    "    \n",
-    "    print(f'\\n全動画でOriginalが高MAE(>=10)のウィンドウ数: {len(high_mae_keys)}')\n",
     "    \n",
     "    if len(high_mae_keys) > 0:\n",
     "        # 高MAEウィンドウのデータを抽出\n",
