Mの偏移計算

--- a/4-POSAccuracyEvalu.ipynb
+++ b/4-POSAccuracyEvalu.ipynb
@@ -1725,7 +1725,290 @@
    "id": "27792b58",
    "metadata": {},
    "outputs": [],
-   "source": "methodCombinations = [\n    ['cuda', cupy_POS, \"cupy_POS\"]\n]\n\nfor i in range(len(movie_paths)):\n    print(f'Processing movie: {movie_paths[i]}')\n    inputMoviePath = movie_paths[i]\n    rootDir = data_dirs[i]\n    dataName = movie_names[i]\n\n    cap = cv2.VideoCapture(inputMoviePath)\n    fps = cap.get(cv2.CAP_PROP_FPS)\n    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n\n    POS_internalArray_path = os.path.join(rootDir, SAVE_DIR, f'POS_internalArray_output_{dataName}.csv')\n    POS_internalArray_df = pd.read_csv(POS_internalArray_path)\n    \n    # 図の保存先ディレクトリ\n    figure_dir = os.path.join(rootDir, SAVE_DIR, 'figures')\n    os.makedirs(figure_dir, exist_ok=True)\n    \n    print(f'\\n読み込んだデータ件数: {len(POS_internalArray_df)}')\n    \n    # 各ウィンドウに対してプロット\n    for idx, row in POS_internalArray_df.iterrows():\n        window_index = row['window_index']\n        window_size = row['window_size']\n        stride = row['stride']\n        frame_start = row['frame_start']\n        frame_end = row['frame_end']\n        window_start_time = row['window_start_time']\n        window_end_time = row['window_end_time']\n        ecg_bpm = row['ecg_bpm']\n        rppg_bpm = row['rppg_bpm']\n        bpm_MAE = row['bpm_MAE']\n        M_list_str = row['M_list']\n        num_sliding_windows = row['num_sliding_windows']\n        \n        print(f\"\\nウィンドウ {window_index}: 窓サイズ {window_size}s, ストライド {stride}s\")\n        print(f\"  時間範囲: {window_start_time:.2f}s - {window_end_time:.2f}s\")\n        print(f\"  スライディングウィンドウ数: {num_sliding_windows}\")\n        print(f\"  ECG BPM: {ecg_bpm:.2f}, rPPG BPM: {rppg_bpm:.2f}, MAE: {bpm_MAE:.2f}\")\n        \n        # M_listを解析\n        # フォーマット: \"r1 g1 b1; r2 g2 b2; ...\" (セミコロン区切りで各時刻、スペース区切りでRGB)\n        M_times = M_list_str.split('; ')\n        \n        R_list = []\n        G_list = []\n        B_list = []\n        \n        for M_time in M_times:\n            values = M_time.strip().split()\n            if len(values) == 3:\n                R_list.append(float(values[0]))\n                G_list.append(float(values[1]))\n                B_list.append(float(values[2]))\n        \n        # 時系列プロット\n        fig, axes = plt.subplots(3, 1, figsize=(15, 10), sharex=True)\n        \n        time_axis = np.arange(len(R_list))\n        \n        # Rチャンネル\n        axes[0].plot(time_axis, R_list, color='red', linewidth=1.5, label='R channel')\n        axes[0].set_ylabel('M (R)', fontsize=11)\n        axes[0].set_title(f'Window {window_index} - M変化 (R, G, B)\\nMAE: {bpm_MAE:.2f}, 窓サイズ: {window_size}s', fontsize=13)\n        axes[0].grid(True, alpha=0.3)\n        axes[0].legend()\n        \n        # Gチャンネル\n        axes[1].plot(time_axis, G_list, color='green', linewidth=1.5, label='G channel')\n        axes[1].set_ylabel('M (G)', fontsize=11)\n        axes[1].grid(True, alpha=0.3)\n        axes[1].legend()\n        \n        # Bチャンネル\n        axes[2].plot(time_axis, B_list, color='blue', linewidth=1.5, label='B channel')\n        axes[2].set_ylabel('M (B)', fontsize=11)\n        axes[2].set_xlabel('スライディングウィンドウインデックス', fontsize=11)\n        axes[2].grid(True, alpha=0.3)\n        axes[2].legend()\n        \n        plt.tight_layout()\n        \n        # 保存\n        output_path = os.path.join(figure_dir, f'M_list_RGB_window_{window_index}_{dataName}.png')\n        plt.savefig(output_path, dpi=300, bbox_inches='tight')\n        print(f\"  プロットを保存: {output_path}\")\n        plt.close()\n        \n    cap.release()\n    print(f'\\n{dataName}の処理が完了しました。')"
+   "source": [
+    "methodCombinations = [\n",
+    "    ['cuda', cupy_POS, \"cupy_POS\"]\n",
+    "]\n",
+    "\n",
+    "for i in range(len(movie_paths)):\n",
+    "    print(f'Processing movie: {movie_paths[i]}')\n",
+    "    inputMoviePath = movie_paths[i]\n",
+    "    rootDir = data_dirs[i]\n",
+    "    dataName = movie_names[i]\n",
+    "\n",
+    "    cap = cv2.VideoCapture(inputMoviePath)\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "\n",
+    "    POS_internalArray_path = os.path.join(rootDir, SAVE_DIR, f'POS_internalArray_output_{dataName}.csv')\n",
+    "    POS_internalArray_df = pd.read_csv(POS_internalArray_path)\n",
+    "    \n",
+    "    # 図の保存先ディレクトリ\n",
+    "    figure_dir = os.path.join(rootDir, SAVE_DIR, 'figures')\n",
+    "    os.makedirs(figure_dir, exist_ok=True)\n",
+    "    \n",
+    "    print(f'\\n読み込んだデータ件数: {len(POS_internalArray_df)}')\n",
+    "    \n",
+    "    # 各ウィンドウに対してプロット\n",
+    "    for idx, row in POS_internalArray_df.iterrows():\n",
+    "        window_index = row['window_index']\n",
+    "        window_size = row['window_size']\n",
+    "        stride = row['stride']\n",
+    "        frame_start = row['frame_start']\n",
+    "        frame_end = row['frame_end']\n",
+    "        window_start_time = row['window_start_time']\n",
+    "        window_end_time = row['window_end_time']\n",
+    "        ecg_bpm = row['ecg_bpm']\n",
+    "        rppg_bpm = row['rppg_bpm']\n",
+    "        bpm_MAE = row['bpm_MAE']\n",
+    "        M_list_str = row['M_list']\n",
+    "        num_sliding_windows = row['num_sliding_windows']\n",
+    "        \n",
+    "        print(f\"\\nウィンドウ {window_index}: 窓サイズ {window_size}s, ストライド {stride}s\")\n",
+    "        print(f\"  時間範囲: {window_start_time:.2f}s - {window_end_time:.2f}s\")\n",
+    "        print(f\"  スライディングウィンドウ数: {num_sliding_windows}\")\n",
+    "        print(f\"  ECG BPM: {ecg_bpm:.2f}, rPPG BPM: {rppg_bpm:.2f}, MAE: {bpm_MAE:.2f}\")\n",
+    "        \n",
+    "        # M_listを解析\n",
+    "        # フォーマット: \"r1 g1 b1; r2 g2 b2; ...\" (セミコロン区切りで各時刻、スペース区切りでRGB)\n",
+    "        M_times = M_list_str.split('; ')\n",
+    "        \n",
+    "        R_list = []\n",
+    "        G_list = []\n",
+    "        B_list = []\n",
+    "        \n",
+    "        for M_time in M_times:\n",
+    "            values = M_time.strip().split()\n",
+    "            if len(values) == 3:\n",
+    "                R_list.append(float(values[0]))\n",
+    "                G_list.append(float(values[1]))\n",
+    "                B_list.append(float(values[2]))\n",
+    "        \n",
+    "        # 時系列プロット\n",
+    "        fig, axes = plt.subplots(3, 1, figsize=(15, 10), sharex=True)\n",
+    "        \n",
+    "        time_axis = np.arange(len(R_list))\n",
+    "        \n",
+    "        # Rチャンネル\n",
+    "        axes[0].plot(time_axis, R_list, color='red', linewidth=1.5, label='R channel')\n",
+    "        axes[0].set_ylabel('M (R)', fontsize=11)\n",
+    "        axes[0].set_title(f'Window {window_index} - M変化 (R, G, B)\\nMAE: {bpm_MAE:.2f}, 窓サイズ: {window_size}s, 窓時間: {window_start_time:.2f}-{window_end_time:.2f}s', fontsize=13)\n",
+    "        axes[0].legend()\n",
+    "        \n",
+    "        # Gチャンネル\n",
+    "        axes[1].plot(time_axis, G_list, color='green', linewidth=1.5, label='G channel')\n",
+    "        axes[1].set_ylabel('M (G)', fontsize=11)\n",
+    "        axes[1].grid(True, alpha=0.3)\n",
+    "        axes[1].legend()\n",
+    "        \n",
+    "        # Bチャンネル\n",
+    "        axes[2].plot(time_axis, B_list, color='blue', linewidth=1.5, label='B channel')\n",
+    "        axes[2].set_ylabel('M (B)', fontsize=11)\n",
+    "        axes[2].set_xlabel('スライディングウィンドウインデックス', fontsize=11)\n",
+    "        axes[2].grid(True, alpha=0.3)\n",
+    "        axes[2].legend()\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        \n",
+    "        # 保存\n",
+    "        output_path = os.path.join(figure_dir, f'M_list_RGB_window_{window_index}_{dataName}.png')\n",
+    "        plt.savefig(output_path, dpi=300, bbox_inches='tight')\n",
+    "        print(f\"  プロットを保存: {output_path}\")\n",
+    "        plt.close()\n",
+    "        \n",
+    "    cap.release()\n",
+    "    print(f'\\n{dataName}の処理が完了しました。')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2158636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "methodCombinations = [\n",
+    "    ['cuda', cupy_POS, \"cupy_POS\"]\n",
+    "]\n",
+    "\n",
+    "SPLIT_TIME = 90\n",
+    "\n",
+    "for i in range(len(movie_paths)):\n",
+    "    print(f'Processing movie: {movie_paths[i]}')\n",
+    "    inputMoviePath = movie_paths[i]\n",
+    "    rootDir = data_dirs[i]\n",
+    "    dataName = movie_names[i]\n",
+    "\n",
+    "    cap = cv2.VideoCapture(inputMoviePath)\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "\n",
+    "    POS_internalArray_path = os.path.join(rootDir, SAVE_DIR, f'POS_internalArray_output_{dataName}.csv')\n",
+    "    POS_internalArray_df = pd.read_csv(POS_internalArray_path)\n",
+    "    \n",
+    "    # 図の保存先ディレクトリ\n",
+    "    figure_dir = os.path.join(rootDir, SAVE_DIR, 'figures')\n",
+    "    os.makedirs(figure_dir, exist_ok=True)\n",
+    "    \n",
+    "    print(f'\\n読み込んだデータ件数: {len(POS_internalArray_df)}')\n",
+    "    \n",
+    "    extracted_signals_csv_path = os.path.join(rootDir, f'extracted_signals.csv')\n",
+    "    extracted_signals_df = pd.read_csv(extracted_signals_csv_path)\n",
+    "    print(f'抽出信号データ件数: {len(extracted_signals_df)}')\n",
+    "\n",
+    "    # extracted_signalsは0フレーム目から最終フレームまでの1フレームごとのR,G,B信号を含む\n",
+    "    r_signal = extracted_signals_df['r_mean'].values\n",
+    "    g_signal = extracted_signals_df['g_mean'].values\n",
+    "    b_signal = extracted_signals_df['b_mean'].values\n",
+    "    \n",
+    "    print(f'RGB信号の長さ: R={len(r_signal)}, G={len(g_signal)}, B={len(b_signal)}')\n",
+    "\n",
+    "    # ============================================================================\n",
+    "    # POS法と同様にMを計算\n",
+    "    # ============================================================================\n",
+    "    rgb_signal = np.array([[r_signal, g_signal, b_signal]], dtype=np.float32)\n",
+    "    rgb_cupy = cp.asarray(rgb_signal)\n",
+    "    \n",
+    "    eps = 10**-9\n",
+    "    X = rgb_cupy\n",
+    "    fps_cupy = cp.float32(fps)\n",
+    "    e, c, f = X.shape  # e = #estimators, c = 3 rgb ch., f = #frames\n",
+    "    w = int(1.6 * fps_cupy)  # window length\n",
+    "    \n",
+    "    print(f'POS法パラメータ: e={e}, c={c}, f={f}, w={w}')\n",
+    "    \n",
+    "    # Mの時系列を保存するリスト\n",
+    "    M_R_list = []\n",
+    "    M_G_list = []\n",
+    "    M_B_list = []\n",
+    "    M_frame_indices = []  # 各Mが対応するフレーム位置(ウィンドウの中心)\n",
+    "    \n",
+    "    # スライディングウィンドウループ\n",
+    "    for n in range(w, f):\n",
+    "        m = n - w + 1\n",
+    "        \n",
+    "        # 時間的正規化\n",
+    "        Cn = X[:, :, m:(n + 1)]\n",
+    "        M = 1.0 / (cp.mean(Cn, axis=2) + eps)\n",
+    "        \n",
+    "        # M[0]がこのウィンドウのMの値(RGB 3チャンネル)\n",
+    "        M_np = cp.asnumpy(M[0])\n",
+    "        M_R_list.append(M_np[0])\n",
+    "        M_G_list.append(M_np[1])\n",
+    "        M_B_list.append(M_np[2])\n",
+    "        \n",
+    "        # このMが対応するフレーム位置(ウィンドウの中心)\n",
+    "        center_frame = (m + n) / 2\n",
+    "        M_frame_indices.append(center_frame)\n",
+    "    \n",
+    "    M_R_array = np.array(M_R_list)\n",
+    "    M_G_array = np.array(M_G_list)\n",
+    "    M_B_array = np.array(M_B_list)\n",
+    "    M_frame_indices = np.array(M_frame_indices)\n",
+    "    \n",
+    "    # フレームインデックスを時間に変換\n",
+    "    M_times = M_frame_indices / fps\n",
+    "    \n",
+    "    print(f'計算されたMの数: {len(M_R_list)}')\n",
+    "    \n",
+    "    # ============================================================================\n",
+    "    # 前半と後半に分割してプロット\n",
+    "    # ============================================================================\n",
+    "    first_half_mask = M_times <= SPLIT_TIME\n",
+    "    second_half_mask = M_times >= SPLIT_TIME\n",
+    "    \n",
+    "    for period_name, mask in [('first_half', first_half_mask), ('second_half', second_half_mask)]:\n",
+    "        print(f'\\n{period_name}のプロットを作成中...')\n",
+    "        \n",
+    "        M_R_period = M_R_array[mask]\n",
+    "        M_G_period = M_G_array[mask]\n",
+    "        M_B_period = M_B_array[mask]\n",
+    "        M_times_period = M_times[mask]\n",
+    "        \n",
+    "        if len(M_R_period) == 0:\n",
+    "            print(f'{period_name}: データが存在しないためスキップします')\n",
+    "            continue\n",
+    "        \n",
+    "        print(f'{period_name}のデータ点数: {len(M_R_period)}')\n",
+    "        print(f'{period_name}の時間範囲: {M_times_period[0]:.2f}s - {M_times_period[-1]:.2f}s')\n",
+    "        \n",
+    "        # 時系列プロット\n",
+    "        fig, axes = plt.subplots(3, 1, figsize=(20, 10), sharex=True)\n",
+    "        \n",
+    "        # Rチャンネル\n",
+    "        axes[0].plot(M_times_period, M_R_period, color='red', linewidth=1.0, label='R channel')\n",
+    "        axes[0].set_ylabel('M (R)', fontsize=12)\n",
+    "        period_title = f'{dataName} - M変化 (R, G, B) - {period_name}'\n",
+    "        if period_name == 'first_half':\n",
+    "            period_title += f' (0-{SPLIT_TIME}s)'\n",
+    "        else:\n",
+    "            period_title += f' ({SPLIT_TIME}s-)'\n",
+    "        axes[0].set_title(period_title, fontsize=14)\n",
+    "        axes[0].grid(True, alpha=0.3)\n",
+    "        axes[0].legend()\n",
+    "        \n",
+    "        # Gチャンネル\n",
+    "        axes[1].plot(M_times_period, M_G_period, color='green', linewidth=1.0, label='G channel')\n",
+    "        axes[1].set_ylabel('M (G)', fontsize=12)\n",
+    "        axes[1].grid(True, alpha=0.3)\n",
+    "        axes[1].legend()\n",
+    "        \n",
+    "        # Bチャンネル\n",
+    "        axes[2].plot(M_times_period, M_B_period, color='blue', linewidth=1.0, label='B channel')\n",
+    "        axes[2].set_ylabel('M (B)', fontsize=12)\n",
+    "        axes[2].set_xlabel('時間 [s]', fontsize=12)\n",
+    "        axes[2].grid(True, alpha=0.3)\n",
+    "        axes[2].legend()\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        \n",
+    "        # 保存\n",
+    "        output_path = os.path.join(figure_dir, f'M_timeseries_{period_name}_{dataName}.png')\n",
+    "        plt.savefig(output_path, dpi=300, bbox_inches='tight')\n",
+    "        print(f'{period_name}のプロットを保存: {output_path}')\n",
+    "        plt.close()\n",
+    "    \n",
+    "    # ============================================================================\n",
+    "    # 全体のプロット(オプション)\n",
+    "    # ============================================================================\n",
+    "    print('\\n全体のプロットを作成中...')\n",
+    "    \n",
+    "    fig, axes = plt.subplots(3, 1, figsize=(24, 10), sharex=True)\n",
+    "    \n",
+    "    # Rチャンネル\n",
+    "    axes[0].plot(M_times, M_R_array, color='red', linewidth=0.8, label='R channel')\n",
+    "    axes[0].set_ylabel('M (R)', fontsize=12)\n",
+    "    axes[0].set_title(f'{dataName} - M変化 (R, G, B) - 全体', fontsize=14)\n",
+    "    axes[0].grid(True, alpha=0.3)\n",
+    "    axes[0].axvline(x=SPLIT_TIME, color='black', linestyle='--', alpha=0.7, linewidth=2, label=f'Split at {SPLIT_TIME}s')\n",
+    "    axes[0].legend()\n",
+    "    \n",
+    "    # Gチャンネル\n",
+    "    axes[1].plot(M_times, M_G_array, color='green', linewidth=0.8, label='G channel')\n",
+    "    axes[1].set_ylabel('M (G)', fontsize=12)\n",
+    "    axes[1].grid(True, alpha=0.3)\n",
+    "    axes[1].axvline(x=SPLIT_TIME, color='black', linestyle='--', alpha=0.7, linewidth=2)\n",
+    "    axes[1].legend()\n",
+    "    \n",
+    "    # Bチャンネル\n",
+    "    axes[2].plot(M_times, M_B_array, color='blue', linewidth=0.8, label='B channel')\n",
+    "    axes[2].set_ylabel('M (B)', fontsize=12)\n",
+    "    axes[2].set_xlabel('時間 [s]', fontsize=12)\n",
+    "    axes[2].grid(True, alpha=0.3)\n",
+    "    axes[2].axvline(x=SPLIT_TIME, color='black', linestyle='--', alpha=0.7, linewidth=2)\n",
+    "    axes[2].legend()\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # 保存\n",
+    "    output_path = os.path.join(figure_dir, f'M_timeseries_full_{dataName}.png')\n",
+    "    plt.savefig(output_path, dpi=300, bbox_inches='tight')\n",
+    "    print(f'全体のプロットを保存: {output_path}')\n",
+    "    plt.close()\n",
+    "    \n",
+    "    cap.release()\n",
+    "    print(f'\\n{dataName}の処理が完了しました。')"
+   ]
   }
  ],
  "metadata": {
